--- a/templates/index.html
+++ b/templates/index.html
@@ -1,170 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
-    <style>
-        .header{
-            position:sticky;
-            top: 0;
-        }
-    </style>
-</head>
-<body onload="startTime()">
-<div class="container">
-    <div class="col-2"></div>
-    <div class="col-7">
-        <br><button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#chuj">Lista Zadań</button>
-        <div class="overflow-scroll collapse" id="chuj" style="max-height: 200px;">
-            <table id ="listaZadan" class="table table-hover table-striped">
-            <thead class="table-light header">
-                    <tr>
-                    <th>czynnosc</th>
-                    <th>data</th>
-                    <th>godzina</th>
-                    <th>priorytet</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-                <tr>
-                    <td>czynnosc</td>
-                    <td>data</td>
-                    <td>godzina</td>
-                    <td>priorytet</td>
-                </tr>
-            </tbody>
-            </table>
-        </div><br><br>
-        <div id="formularz" class="form-inline align-content-center">
-            <form id="form" method="POST" >
-                <div class="form-floating">
-                    <input type="text" name="fCzynnosc" id="fCzynnosc" class="form-control" placeholder="czynnosc"><br>
-                    <label for="fCzynnosc" class="form-label" for="fCzynnosc">Czynność</label>
-                </div>
-                <div class="form-floating mb-2">
-                    <textarea id="fOpis" class="form-control" placeholder="opis" style="height: 200px; resize: none;"></textarea><br>
-                    <label for="fOpis" class="form-label">Opisz czynność</label>
-                </div>
-                <div class="row">
-                    <div class="col input-group">
-                        <span class="input-group-text col">Priorytet</span>
-                        <select name="fPriorytet" id="fPriorytet" class="custom-select form-control">
-                            <option value="low">low</option>
-                            <option value="high">high</option>
-                            <option value="medium" selected="selected">medium</option>
-                        </select>
-                    </div>
-                    <div class="col input-group">
-                        <span class="input-group-text">Dzień</span>
-                        <input type="date" name="fData" id="fData" class="form-control custom-date">
-                    </div>
-                    <div class="col input-group w-20">
-                        <span class="input-group-text">Godzina</span>
-                        <input type="time" name="fGodzina" id="fGodzina" class="form-control flex-fill">
-                    </div>
-                </div><br>
-                <button class="btn btn-secondary" type="submit">wyslij</button>
-            </form>
-        </div>
-    </div>
-    <div class="col-3">
-        <span id="zegar"></span>
-        <div id="kalendarz">
+{%extends 'base.html' %}
 
-        <script>
-            const data2 = new Date();
-            let miesiacInt = data2.getMonth();
-            let rokInt = data2.getMonth();
-            function daysInMonth(rok, miesiacInt) {
-                return new Date(rokInt, miesiacInt + 1, 0).getDate();
-            }
-            // for(let i = 0; i <= dniMiesiaca)
-        </script>
+{% block title %} Strona glowna {% endblock %}
 
-        </div>
-    </div>
-</div>
-<script>
-    function startTime() {
-        const data1 = new Date();
-        let godz = data1.getHours();
-        let min = data1.getMinutes();
-        let sec = data1.getSeconds();
-        min = checkTime(min);
-        sec = checkTime(sec);
-        let zegar = document.getElementById('zegar');
-        zegar.innerHTML = '<p>' + godz + ':' + min + ':' + sec + '</p>';
-        setTimeout(startTime, 1000);
-    }
-    function checkTime(i) {
-        if (i < 10) 
-            i = '0' + i
-        return i;
-    }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
-</html>
+{% block content %}
+<tbody>
+    <tr>
+        <td>czynnosc</td>
+        <td>data</td>
+        <td>godzina</td>
+        <td>priorytet</td>
+    </tr>
+</tbody>
+{% endblock %}
