--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,33 @@
 {% block title %} Strona glowna {% endblock %}
 
 {% block content %}
-<tbody>
-    <tr>
-        <td>czynnosc</td>
-        <td>data</td>
-        <td>godzina</td>
-        <td>priorytet</td>
-    </tr>
-</tbody>
+
+<table id ="listaZadan" class="table table-hover table-striped">
+
+    <thead class="table-light header">
+        <tr>
+            <th>id</th>
+            <th>czynność</th>
+            <th>opis czynnosci</th>
+            <th>priorytet</th>
+            <th>data</th>
+            <th>godzina</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        {%for czynnosc in TODO %}
+            <tr>
+                <td>{{czynnosc.id}}</td>
+                <td>{{czynnosc.czynnosc}}</td>
+                <td>{{czynnosc.opis_czynnosci}}</td>
+                <td>{{czynnosc.priorytet}}</td>
+                <td>{{czynnosc.data}}</td>
+                <td>{{czynnosc.godzina}}</td>
+            </tr>
+        {%endfor%}
+    </tbody>
+
+    </table>
+
 {% endblock %}
