--- a/templates/base.html
+++ b/templates/base.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{{url_for('static', filename='style/css/bootstrap.min.css')}}" rel="stylesheet">
     <title>{% block title %} my title {% endblock %}</title>
     <style>
         .header{
             position:sticky;
             top: 0;
         }
+
+        .nav-bar-button{
+            color: white;
+        }
     </style>
 </head>
 <body onload="startTime()">
+    <nav class="navbar navbar-expand-lg bg-body-teritiary navbar-light justify-content-center" style="background-color: #6d757d;">
+        <a class="navbar-brand ms-3" href="{{url_for('index')}}" style="color:white;">TODO List</a>
+        <ul class="navbar-nav">
+            <li class="nav-item ms-3"><a href="{{url_for('add')}}" class="nav-link nav-bar-button">Dodaj</a></li>
+            <li class="nav-item ms-3"><a href="{{url_for('wyswietl')}}" class="nav-link nav-bar-button">Wyświetl</a></li>
+            <li class="nav-item ms-3"><a href="{{url_for('api')}}" class="nav-link nav-bar-button">API</a></li>
+          </ul>
+    </nav>
 <div class="container">
-    <div class="col-2"></div>
-    <div class="col-7">
+    <div class="position-absolute top-25 start-50 translate-middle" >
 
         {% block content %}
         {% endblock %}
 
 
     </div>
-    <div class="col-3">
+    <!-- <div class="col-3">
         <span id="zegar"></span>
         <div id="kalendarz">
 
@@ -38,7 +49,7 @@
         </script>
 
         </div>
-    </div>
+    </div> -->
 </div>
 <script>
     function startTime() {
@@ -58,6 +69,6 @@
         return i;
     }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="{{url_for('static', filename='style/js/bootstrap.min.js')}}"></script>
 </body>
 </html>
