--- a/templates/index.html
+++ b/templates/index.html
@@ -4,75 +4,6 @@
 
 {% block content %}
 
-            <br><button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#collTable">Lista Zadań</button>
-
-        <div class="overflow-scroll collapse" id="collTable" style="max-height: 250px;">
-            <table id ="listaZadan" class="table table-hover table-striped">
-            <thead class="table-light header">
-        <tr>
-            <th>id</th>
-            <th>czynność</th>
-            <th>opis czynnosci</th>
-            <th>priorytet</th>
-            <th>data</th>
-            <th>godzina</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        {%for czynnosc in TODO %}
-            <tr>
-                <td>{{czynnosc.id}}</td>
-                <td>{{czynnosc.czynnosc}}</td>
-                <td>{{czynnosc.opis_czynnosci}}</td>
-                <td>{{czynnosc.priorytet}}</td>
-                <td>{{czynnosc.data}}</td>
-                <td>{{czynnosc.godzina}}</td>
-            </tr>
-        {%endfor%}
-    </tbody>
-
-    </table>
-
-</div><br><br>
-
-<div id="formularz" class="form-inline align-content-center">
-    <form id="form" method="POST" >
-
-        <div class="form-floating">
-            <input type="text" name="fCzynnosc" id="fCzynnosc" class="form-control" placeholder="czynnosc"><br>
-            <label class="form-label" for="fCzynnosc">Czynność</label>
-        </div>
-
-        <div class="form-floating mb-2">
-            <textarea  name="fOpis" id="fOpis" class="form-control" placeholder="opis" style="height: 200px; resize: none;"></textarea><br>
-            <label for="fOpis" class="form-label">Opisz czynność</label>
-        </div>
-
-        <div class="row">
-
-            <div class="col input-group">
-                <span class="input-group-text col">Priorytet</span>
-                <select name="fPriorytet" id="fPriorytet" class="custom-select form-control">
-                    <option value="low">low</option>
-                    <option value="high">high</option>
-                    <option value="medium" selected="selected">medium</option>
-                </select>
-            </div>
-
-            <div class="col input-group">
-                <span class="input-group-text">Dzień</span>
-                <input type="date" name="fData" id="fData" class="form-control custom-date">
-            </div>
-
-            <div class="col input-group w-20">
-                <span class="input-group-text">Godzina</span>
-                <input type="time" name="fGodzina" id="fGodzina" class="form-control flex-fill">
-            </div>
-
-        </div><br>
-        <button class="btn btn-secondary" type="submit">wyslij</button>
-    </form>
-</div>
+<h1>inex</h1>
 
 {% endblock %}
