put + podstrona + bootstrap

--- a/templates/add.html
+++ b/templates/add.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div id="formularz" class="form-inline align-content-center">
+<div id="formularz" class="form-inline align-content-center pb-5">
     <form id="form" method="POST" >
 
         <div class="form-floating">
