--- a/static/style/css/style.css
+++ b/static/style/css/style.css
@@ -2,3 +2,12 @@ table, tr, th{
  border: 1px solid black;
  width: 400px;
 }
+
+body{
+    margin: 0;
+}
+
+footer {
+    display: block;
+    unicode-bidi: isolate;
+}
