--- a/templates/show.html
+++ b/templates/show.html
@@ -4,35 +4,25 @@
 
 {% block content %}
 
-<!--<div class="overflow-scroll" id="collTable" style="max-height: 250px;">
-            <table id ="listaZadan" class="table table-hover table-striped">
-            <thead class="table-light header">
-        <tr>
-            <th>id</th>
-            <th>czynność</th>
-            <th>opis czynnosci</th>
-            <th>priorytet</th>
-            <th>data</th>
-            <th>godzina</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        {%for czynnosc in TODO %}
+    <table id ="listaZadan" class="table table-bordered">
+        <thead class="table-light header">
             <tr>
-                <td>{{czynnosc.id}}</td>
-                <td>{{czynnosc.czynnosc}}</td>
-                <td>{{czynnosc.opis_czynnosci}}</td>
-                <td>{{czynnosc.priorytet}}</td>
-                <td>{{czynnosc.data}}</td>
-                <td>{{czynnosc.godzina}}</td>
+                <th>czynność</th>
+                <th>data</th>
+                <th>opis czynnosci</th>
+                <th>priorytet</th>
+                <th>godzina</th>
+                <th>funkcje</th>
             </tr>
-        {%endfor%}
-    </tbody>
+        </thead>
 
-    </table> -->
-    <div id="TODOList"></div>
-<!-- </div> -->
+        <tbody id="TODOList">
+            
+        </tbody>
+    </table> 
+
+
+
 <script>
     TODOList = document.getElementById("TODOList");
     const api_url = "{{url_for('get_czynnosci')}}";
@@ -46,13 +36,70 @@
         tempB = Math.floor(new Date(b.data).getTime() / 1000);
         return tempA - tempB;
     }
-    console.log(workData.sort(sortByData));
-    workData.forEach(elem =>{
-        console.log(elem);
-        let TODOElem = document.createElement("div");
-        TODOList.appendChild(TODOElem);
-        TODOElem.innerHTML =elem.czynnosc +" "+ elem.data;
-    });
+
+    function fetchData(){
+        console.log(workData.sort(sortByData));
+        workData.forEach(elem =>{
+            console.log(elem);
+            let TODOtbodyTr = document.createElement("tr")
+            TODOList.appendChild(TODOtbodyTr);
+
+            let TODOtbodyTd1 = document.createElement("td")
+            let TODOtbodyTd1Text = document.createTextNode(elem.czynnosc);
+            TODOtbodyTd1.appendChild(TODOtbodyTd1Text);
+            TODOtbodyTr.appendChild(TODOtbodyTd1);
+
+            let TODOtbodyTd2 = document.createElement("td")
+            let TODOtbodyTd2Text = document.createTextNode(elem.data);
+            TODOtbodyTd2.appendChild(TODOtbodyTd2Text);
+            TODOtbodyTr.appendChild(TODOtbodyTd2);
+
+            let TODOtbodyTd3 = document.createElement("td")
+            let TODOtbodyTd3Text = document.createTextNode(elem.opis_czynnosci);
+            TODOtbodyTd3.appendChild(TODOtbodyTd3Text);
+            TODOtbodyTr.appendChild(TODOtbodyTd3);
+
+            let TODOtbodyTd4 = document.createElement("td")
+            let TODOtbodyTd4Text = document.createTextNode(elem.priorytet);
+            TODOtbodyTd4.appendChild(TODOtbodyTd4Text);
+            TODOtbodyTr.appendChild(TODOtbodyTd4);
+
+            let TODOtbodyTd5 = document.createElement("td")
+            let TODOtbodyTd5Text = document.createTextNode(elem.godzina);
+            TODOtbodyTd5.appendChild(TODOtbodyTd5Text);
+            TODOtbodyTr.appendChild(TODOtbodyTd5);
+
+            
+            let TODOtbodyTd6 = document.createElement("td")
+
+            let TODOtbodyTd6A = document.createElement("a");
+            TODOtbodyTd6A.setAttribute("href", "{{ url_for('update', id ="+ elem.id+")}}")
+            TODOtbodyTd6A.setAttribute("type", "button")
+            TODOtbodyTd6A.setAttribute("class", "btn btn-success")
+            let TODOtbodyTd6Text = document.createTextNode("D");
+            TODOtbodyTd6A.appendChild(TODOtbodyTd6Text);
+            TODOtbodyTd6.appendChild(TODOtbodyTd6A);
+
+            TODOtbodyTr.appendChild(TODOtbodyTd6);
+
+            let TODOtbodyTd7A = document.createElement("a");
+            TODOtbodyTd7A.setAttribute("href", "/")
+            TODOtbodyTd7A.setAttribute("type", "button")
+            TODOtbodyTd7A.setAttribute("class", "btn btn-danger")
+            let TODOtbodyTd7Text = document.createTextNode("X");
+            TODOtbodyTd7A.appendChild(TODOtbodyTd7Text);
+            TODOtbodyTd6.appendChild(TODOtbodyTd7A);
+
+            TODOtbodyTr.appendChild(TODOtbodyTd6);
+            
+
+
+            // TODOElem.innerHTML =elem.czynnosc +" "+ elem.data +" "+ elem.opis_czynnosci +" "+ elem.priorytet +" "+ elem.godzina;
+        });
+    }
+
+    fetchData();
+
 }
 window.onload = () => {
     apiGetTODO();
