--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html class="h-100" lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{{url_for('static', filename='style/css/bootstrap.min.css')}}" rel="stylesheet">
     <title>{% block title %} my title {% endblock %}</title>
     <style>
         .header{
             position:sticky;
             top: 0;
         }
+
+        .nav-bar-button{
+            color: white;
+        }
     </style>
 </head>
-<body onload="startTime()">
-<div class="container">
-    <div class="col-2"></div>
-    <div class="col-7">
+<body class="d-flex flex-column h-100"">
+    <nav class="navbar navbar-expand navbar-light" style="background-color: #6d757d;">
+        <div class="container-fluid justify-content-center">
+        <a class="navbar-brand ms-2" href="{{url_for('index')}}" style="color:white;">TODO List</a>
+        <ul class="navbar-nav">
+            <li class="nav-item ms-2"><a href="{{url_for('add')}}" class="nav-link nav-bar-button">Dodaj</a></li>
+            <li class="nav-item ms-2"><a href="{{url_for('wyswietl')}}" class="nav-link nav-bar-button">Wyświetl</a></li>
+            <li class="nav-item ms-2"><a href="{{url_for('api')}}" class="nav-link nav-bar-button">API</a></li>
+          </ul>
+        </div>
+    </nav>
+<main class="flex-shrink-0">
+    <div class="container">
+    <div class="mt-4 mx-auto col-6" >
 
         {% block content %}
         {% endblock %}
 
 
     </div>
-    <div class="col-3">
-        <span id="zegar"></span>
-        <div id="kalendarz">
+</div>
+</main>
 
-        <script>
-            const data2 = new Date();
-            let miesiacInt = data2.getMonth();
-            let rokInt = data2.getMonth();
-            function daysInMonth(rok, miesiacInt) {
-                return new Date(rokInt, miesiacInt + 1, 0).getDate();
-            }
-            // for(let i = 0; i <= dniMiesiaca)
-        </script>
-
+<footer class="footer mt-auto py-3" style="background-color: #6d757d;">
+    <div class="container">
+        <div class="text-center p-2">
+            <b style="color:#ffffff;">Strona wykonana przez Dawida Zakrzewskiego i Kacpra Tymickiego</b>
         </div>
     </div>
-</div>
-<script>
+</footer>
+
+<!-- <script>
     function startTime() {
         const data1 = new Date();
         let godz = data1.getHours();
@@ -57,7 +65,7 @@
             i = '0' + i
         return i;
     }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</script> -->
+<script src="{{url_for('static', filename='style/js/bootstrap.min.js')}}"></script>
 </body>
 </html>
