--- a/templates/add.html
+++ b/templates/add.html
@@ -22,9 +22,9 @@
             <div class="col input-group">
                 <span class="input-group-text col">Priorytet</span>
                 <select name="fPriorytet" id="fPriorytet" class="custom-select form-control">
-                    <option value="low">low</option>
-                    <option value="high">high</option>
-                    <option value="medium" selected="selected">medium</option>
+                    <option value="low" id="low">low</option>
+                    <option value="high" id="hight">high</option>
+                    <option value="medium" id="medium" selected="selected">medium</option>
                 </select>
             </div>
 
@@ -39,7 +39,7 @@
             </div>
 
         </div><br>
-        <button class="btn btn-secondary position-absolute start-50 col-3 translate-middle-x" type="submit">wyslij</button>
+        <button class="btn btn-secondary position-absolute start-50 col-3 translate-middle-x" id="sendButton" type="submit">wyslij</button>
     </form>
 </div>
 
