--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
 <body class="d-flex flex-column h-100"">
     <nav class="navbar navbar-expand navbar-light" style="background-color: #6d757d;">
         <div class="container-fluid justify-content-center">
-        <a class="navbar-brand ms-2" href="{{url_for('index')}}" style="color:white;">TODO List</a>
+        <a class="navbar-brand ms-2" href="{{url_for('index')}}" id="NBtodo" style="color:white;">TODO List</a>
         <ul class="navbar-nav">
-            <li class="nav-item ms-2"><a href="{{url_for('add')}}" class="nav-link nav-bar-button">Dodaj</a></li>
-            <li class="nav-item ms-2"><a href="{{url_for('wyswietl')}}" class="nav-link nav-bar-button">Wyświetl</a></li>
-            <li class="nav-item ms-2"><a href="{{url_for('api')}}" class="nav-link nav-bar-button">API</a></li>
+            <li class="nav-item ms-2"><a href="{{url_for('add')}}" id="NBadd" class="nav-link nav-bar-button">Dodaj</a></li>
+            <li class="nav-item ms-2"><a href="{{url_for('index')}}" id="NBshow" class="nav-link nav-bar-button">Wyświetl</a></li>
+            <li class="nav-item ms-2"><a href="{{url_for('api')}}" id="NBapi" class="nav-link nav-bar-button">API</a></li>
           </ul>
         </div>
     </nav>
